# hermes-quickcapture

./: .gitignore  LICENSE  README.md  launcher.py  pyproject.toml
.github/: FUNDING.yml
src/hermes_quickcapture/: app.py  core.py
src/hermes_quickcapture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
